# bps

./: .clangd  .gitignore  CMakeLists.txt  sweep.py  train.py
predictors/: gag.h  pag.h  tbp.h
predictors/example/: bimodal.h
results/BIMODAL.32KB/: LONG-SPEC2K6-00.res  LONG-SPEC2K6-01.res  LONG-SPEC2K6-02.res  LONG-SPEC2K6-03.res  LONG-SPEC2K6-04.res  LONG-SPEC2K6-05.res  LONG-SPEC2K6-06.res  LONG-SPEC2K6-07.res  LONG-SPEC2K6-08.res  LONG-SPEC2K6-09.res  LONG-SPEC2K6-10.res  LONG-SPEC2K6-11.res  LONG-SPEC2K6-12.res  LONG-SPEC2K6-13.res  LONG-SPEC2K6-14.res  LONG-SPEC2K6-15.res  LONG-SPEC2K6-16.res  LONG-SPEC2K6-17.res  LONG-SPEC2K6-18.res  LONG-SPEC2K6-19.res  SHORT-FP-1.res  SHORT-FP-2.res  SHORT-FP-3.res  SHORT-FP-4.res  SHORT-FP-5.res  SHORT-INT-1.res  SHORT-INT-2.res  SHORT-INT-3.res  SHORT-INT-4.res  SHORT-INT-5.res  SHORT-MM-1.res  SHORT-MM-2.res  SHORT-MM-3.res  SHORT-MM-4.res  SHORT-MM-5.res  SHORT-SERV-1.res  SHORT-SERV-2.res  SHORT-SERV-3.res  SHORT-SERV-4.res  SHORT-SERV-5.res
results/GAG-CNT_SIZE.1-GHR_SIZE.18/: LONG-SPEC2K6-07.res  LONG-SPEC2K6-08.res  LONG-SPEC2K6-15.res  LONG-SPEC2K6-16.res  LONG-SPEC2K6-17.res  SHORT-FP-2.res  SHORT-FP-5.res  SHORT-INT-1.res  SHORT-INT-2.res  SHORT-INT-3.res  SHORT-MM-4.res  SHORT-SERV-1.res  SHORT-SERV-2.res
results/GAG-CNT_SIZE.1-GHT_SIZE.17/: LONG-SPEC2K6-00.res  LONG-SPEC2K6-14.res  SHORT-INT-1.res  SHORT-MM-2.res  SHORT-MM-4.res
results/GAG.32K/: LONG-SPEC2K6-00.res  (+39 more)
scripts/: README  bench_list.pl  runall.pl
sim/: Makefile  main.cc  predictor.h  tracer.cc  tracer.h  utils.h
simulator/: predictor.h
(+542 files in other folders)
